Fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,28 @@
     background-color: #1f2937;
     font-family: 'Roboto', sans-serif;
     color: #f9faf8;
+    display: flex; /* Make hero a flex container */
+    justify-content: center; /* Center the container */
+}
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 70%; /* Prevent it from stretching too much */
 }
 
 .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
+
+.header-text {
+    font-size: 24px;
+}
+
 ul {
     list-style-type: none;
     display: flex;
@@ -21,17 +36,21 @@ ul {
     gap: 16px;
 }
 
+
 .description {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     padding-top: 15px;
     padding-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
-.header-text {
-    font-size: 24px;
+a {
+    text-decoration: none;
+    color: #e5e7eb;
 }
+
 
 .main-text {
     font-size: 48px;
@@ -51,7 +70,7 @@ ul {
     padding-right: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
-
+    margin-top: 10px;
 }
 .body {
     padding: 30px;
@@ -129,6 +148,10 @@ ul {
 
 .action-text {
     color: #e5e7eb;
+}
+
+.action-text h4 {
+    font-size: 20px;
 }
 
 .action-button button{
